objects/vlocity_ins__ApplicationPartyRelationship__c.object
<CustomObject>
    <description>Identifies the party or parties who are submitting the application.</description>
    <fields>
        <fullName>vlocity_ins__ApplicationId__c</fullName>
        <label>Application</label>
        <referenceTo>vlocity_ins__Application__c</referenceTo>
        <relationshipLabel>Application Party Relationships</relationshipLabel>
        <relationshipName>ApplicationPartyRelationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <label>Client</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Application Party Relationships</relationshipLabel>
        <relationshipName>ApplicationPartyRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductionCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the production code to use when writing the insurance.</description>
        <label>Production Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__ProductionCode__c.vlocity_ins__IsWritingCode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__ProductionCode__c</referenceTo>
        <relationshipLabel>Application Party Relationships</relationshipLabel>
        <relationshipName>ApplicationPartyRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Role__c</fullName>
        <description>The role that the party plays on the application.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SplitPercentage__c</fullName>
        <description>Commission split percentage for producer relationships.</description>
        <label>Split Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Application Party Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Party Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>